<resources>
    <string name="app_name">Department</string>
    <string name="action_settings">Stop Service</string>
    <string name="action_remove">Remove Data</string>
    <string name="action_track">Track Me</string>
    <string name="action_assign">Assigned Task</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="action_logout">Logout</string>


    <string name="tbllay_caseid">Case ID</string>
    <string name="tbllay_type">Type</string>
    <string name="tbllay_date">Date</string>
    <string name="tbllay_time">Time</string>
    <string name="tbllay_latitude">Latitude</string>
    <string name="tbllay_longitude">Longitude</string>
    <string name="tbllay_status">Status</string>

    <string name="btn_followmap">Show Map</string>
    <string name="btn_assign">Assign</string>
    <string name="btn_navigation">Navigation</string>
    <string name="btn_closecase">Close Case</string>
    <string name="title_activity_crime_map">Map</string>
    <string name="title_activity_assign">AssignActivity</string>
    <string name="title_activity_login">Department App</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_sign_in_short">Protect ME</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
