<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ishanfx.departmentapp.HomeActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_remove"
        android:orderInCategory="100"
        android:title="@string/action_remove"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_track"
        android:orderInCategory="100"
        android:title="@string/action_track"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_assign"
        android:orderInCategory="100"
        android:title="@string/action_assign"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>
