<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ishanfx.departmentapp.DetailActivity"
    tools:showIn="@layout/activity_detail">
    <TableLayout
        android:id="@+id/tblDetails"
        android:layout_width="fill_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">
        <TableRow
            style="@style/casedetails"
           >
            <TextView
                style="@style/listtext"
                android:text="@string/tbllay_caseid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1" />
            <TextView
                style="@style/listtext"

                android:id="@+id/txtCaseID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            style="@style/casedetails"
            >
            <TextView
                style="@style/listtext"
                android:text="@string/tbllay_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1" />
            <TextView
                style="@style/listtext"
                android:id="@+id/txtType"
                android:width="200px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            style="@style/casedetails"
            >
            <TextView
                style="@style/listtext"
                android:text="@string/tbllay_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1" />
            <TextView
                style="@style/listtext"
                android:id="@+id/txtDate"
                android:width="100px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
            style="@style/casedetails"
            >
            <TextView
                style="@style/listtext"
                android:text="@string/tbllay_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1" />
            <TextView
                style="@style/listtext"
                android:id="@+id/txtTime"
                android:width="100px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
            style="@style/casedetails">
            <TextView
                style="@style/listtext"
                android:text="@string/tbllay_latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1" />
            <TextView
                style="@style/listtext"
                android:id="@+id/txtLatitude"
                android:width="100px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
            style="@style/casedetails">
            <TextView
                style="@style/listtext"
                android:text="@string/tbllay_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1" />
            <TextView
                style="@style/listtext"
                android:id="@+id/txtLongitude"
                android:width="100px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
            style="@style/casedetails">
            <TextView
                android:text="@string/tbllay_status"
                style="@style/listtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1" />
            <TextView
                android:id="@+id/txtStatus"
                android:width="100px"
                style="@style/listtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"/>



    </TableLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_assign"
        android:id="@+id/btnAssign"
        android:onClick="ownerAssign"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        style="@style/detailmenubtn"
        android:layout_below="@+id/btnCloseCase"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_followmap"
        android:id="@+id/btnMap"
        android:onClick="showMap"
        android:layout_alignBaseline="@+id/btnAssign"
        android:layout_alignParentRight="true"
        style="@style/detailmenubtn"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_navigation"
        android:id="@+id/button"
        android:onClick="showNavigation"
        android:layout_alignBaseline="@id/btnMap"
        android:layout_centerHorizontal="true"
        style="@style/detailmenubtn"
         />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_closecase"
        android:id="@+id/btnCloseCase"
        android:onClick="showNavigation"
        android:layout_below="@+id/tblDetails"
        android:layout_centerHorizontal="true"
        style="@style/detailmenubtn"
         />
</RelativeLayout>
